switch to gradle